# FreeTimeGSPlusPlus

./: .gitignore  Dockerfile  LICENSE  README.md  THIRD_PARTY.md  flake.nix  pyproject.toml  run
configs/dynerf/ablation/cc/: coffee_martini.toml  cook_spinach.toml  cut_roasted_beef.toml  flame_salmon.toml  flame_steak.toml  sear_steak.toml
configs/dynerf/ablation/gated/score_default/: coffee_martini.toml  cook_spinach.toml  cut_roasted_beef.toml  flame_salmon.toml  flame_steak.toml  sear_steak.toml
configs/dynerf/ablation/gated/score_gate_included/: coffee_martini.toml  cook_spinach.toml  cut_roasted_beef.toml  flame_salmon.toml  flame_steak.toml  sear_steak.toml
configs/dynerf/ablation/nvf/: coffee_martini.toml  cook_spinach.toml  cut_roasted_beef.toml  flame_salmon.toml  flame_steak.toml  sear_steak.toml
configs/dynerf/ablation/reloc_gcr/: coffee_martini.toml  cook_spinach.toml  cut_roasted_beef.toml  flame_salmon.toml  flame_steak.toml  sear_steak.toml
configs/dynerf/ablation/relocation_exact/: coffee_martini.toml
configs/dynerf/ablation/relocation_partial/: coffee_martini.toml
configs/dynerf/ablation/ufm/: coffee_martini.toml  cook_spinach.toml  cut_roasted_beef.toml  flame_salmon.toml  flame_steak.toml  sear_steak.toml
configs/dynerf/ablation/ufm_cc/: coffee_martini.toml  cook_spinach.toml  cut_roasted_beef.toml  flame_salmon.toml  flame_steak.toml  sear_steak.toml
configs/dynerf/ablation/ufm_cc_gated/: coffee_martini.toml  cook_spinach.toml  cut_roasted_beef.toml  flame_salmon.toml  flame_steak.toml  sear_steak.toml
configs/dynerf/ablation/ufm_cc_gated_nvf/: coffee_martini.toml  cook_spinach.toml  cut_roasted_beef.toml  flame_salmon.toml  flame_steak.toml  sear_steak.toml
configs/dynerf/ftgs/: coffee_martini.toml  cook_spinach.toml  cut_roasted_beef.toml  flame_salmon.toml  flame_steak.toml  sear_steak.toml
configs/dynerf/ftgspp/: coffee_martini.toml  cook_spinach.toml  cut_roasted_beef.toml  flame_salmon.toml  flame_steak.toml  sear_steak.toml
configs/enerf_outdoor/ftgs/: actor1_4.toml  actor2_3.toml  actor5_6.toml
configs/enerf_outdoor/ftgspp/: actor1_4.toml  actor2_3.toml  actor5_6.toml
configs/selfcap/ablation/cc/: bike1.toml  bike2.toml  corgi1.toml  corgi2.toml  dance1.toml  dance2.toml
configs/selfcap/ablation/gated/: bike1.toml  bike2.toml  corgi1.toml  corgi2.toml  dance1.toml  dance2.toml
configs/selfcap/ablation/nvf/: bike1.toml  bike2.toml  corgi1.toml  corgi2.toml  dance1.toml  dance2.toml
configs/selfcap/ablation/reloc_gcr/: bike1.toml  bike2.toml  corgi1.toml  corgi2.toml  dance1.toml  dance2.toml
configs/selfcap/ablation/relocation_exact/: dance1.toml
configs/selfcap/ablation/relocation_partial/: dance1.toml
configs/selfcap/ablation/ufm/: bike1.toml  bike2.toml  corgi1.toml  corgi2.toml  dance1.toml  dance2.toml
configs/selfcap/ablation/ufm_cc/: bike1.toml  bike2.toml  corgi1.toml  corgi2.toml  dance1.toml  dance2.toml
configs/selfcap/ablation/ufm_cc_gated/: bike1.toml  bike2.toml  corgi1.toml  corgi2.toml  dance1.toml  dance2.toml
configs/selfcap/ablation/ufm_cc_gated_nvf/: bike1.toml  bike2.toml  corgi1.toml  corgi2.toml  dance1.toml  dance2.toml
configs/selfcap/ftgs/: bike1.toml  bike2.toml  corgi1.toml  corgi2.toml  dance1.toml  dance2.toml
configs/selfcap/ftgspp/: bike1.toml  bike2.toml  corgi1.toml  corgi2.toml  dance1.toml  dance2.toml
ftgspp/: __init__.py  eval.py  render.py
ftgspp/data/: extract.py  flow.py  prep.py  sfm.py
ftgspp/data/utils/: __init__.py  images.py  loader.py  multiview.py
ftgspp/init/: __init__.py  __main__.py  matcher.py  points.py  temporal.py
ftgspp/models/: __init__.py  colorcorrect.py  gaussians.py  velocity.py
ftgspp/train/: __init__.py  __main__.py  optim.py  relocation.py  state.py  train.py
ftgspp/utils/: __init__.py  config.py  io.py  math.py  pipeline.py  sys.py
nix/: colmap.nix  poselib.nix
scripts/: run_dynerf  run_selfcap  run_ufm_flow
